Fixing issues with font-awesome

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>{{ site.title }}</title>
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-HASH" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-HASH" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -42,7 +42,7 @@
 			  <i class="fab fa-github"></i>
 		  </a>
 		  <a href="{{ site.blog}}" target="_blank" aria-label="Blog">
-			  <i class="fab fa-blog"></i>
+			  <i class="fab fa-square-rss"></i>
 		  </a>
 	  </div>
     <p>Attribution-ShareAlike 4.0 International<br />&copy;  {{ site.time | date: "%Y" }} {{ site.author }}</p>
