--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>{{ site.title }}</title>
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-HASH" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.2/css/all.min.css" integrity="sha384-P4A0xUwFVEChMRxTI3v2RYcJuInFaMP8XleBKvnpGpxZKVPkwM+Gb3VjQEx+Kf4H" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
