--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,7 @@
 			  <i class="fab fa-github"></i>
 		  </a>
 		  <a href="{{ site.blog}}" target="_blank" aria-label="Blog">
-			  <i class="fab fa-square-rss"></i>
+			  <i class="fab fa-rss"></i>
 		  </a>
 	  </div>
     <p>Attribution-ShareAlike 4.0 International<br />&copy;  {{ site.time | date: "%Y" }} {{ site.author }}</p>
