--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,15 +37,17 @@
   </main>
 
   <footer>
-	  <div class="social-icons">
+	  <div class="footer-left">
+    <p>Attribution-ShareAlike 4.0 International<br />&copy;  {{ site.time | date: "%Y" }} {{ site.author }}</p>
+	  </div>
+	  <div class="footer-right">
 		  <a href="{{ site.github }}" target="_blank" aria-label="GitHub">
 			  <i class="fab fa-github"></i>
 		  </a>
 		  <a href="{{ site.blog}}" target="_blank" aria-label="Blog">
-			  <i class="fab fa-rss"></i>
+			  <i class="fa-solid fa-square-rss"></i>
 		  </a>
 	  </div>
-    <p>Attribution-ShareAlike 4.0 International<br />&copy;  {{ site.time | date: "%Y" }} {{ site.author }}</p>
   </footer>
 </body>
 
