--- a/assets/style.css
+++ b/assets/style.css
@@ -49,24 +49,22 @@ ul li p {
 }
 
 footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 0.9rem;
   border-top: 1px solid #ddd;
   margin-top: 1.5rem;
   color: #999;
   text-align: left;
 }
 
-footer .social-icons {
-	margin-bottom: 1rem;
-}
 
-footer .social-icons a {
-	margin: 0 0.5rem;
+.footer-right a {
 	font-size: 1.4rem;
 	color: #333;
 	text-decoration: none;
-	transition: color 0.3s ease;
 }
-
-footer .social-icons a:hover {
+.footer-right a:hover {
 	color: #007acc;
 }
