Added new project future-thing

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
 
   <footer>
 	  <div class="footer-left">
-    <p>Attribution-ShareAlike 4.0 International<br />&copy;  {{ site.time | date: "%Y" }} {{ site.author }}</p>
+    <p><a href="{{ site.baseurl }}/LICENSE" target="_blank">Attribution-ShareAlike 4.0 International</a><br />&copy;  {{ site.time | date: "%Y" }} {{ site.author }}</p>
 	  </div>
 	  <div class="footer-right">
 		  <a href="{{ site.github }}" target="_blank" aria-label="GitHub">
