--- a/projects/future-thing/style.css
+++ b/projects/future-thing/style.css
@@ -27,8 +27,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	min-height: 100ch;
-	margin: 2rem 3rem;
+	margin: 0 3rem;
 	padding: 0;
 }
 
